Fix assignment card header overflow issue

--- a/src/app/assignment-card/assignment-card.component.css
+++ b/src/app/assignment-card/assignment-card.component.css
@@ -1,4 +1,5 @@
 .assignment-card{
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     font: var(--main-font);
